# advent-of-code-2024

./: .gitignore  Makefile  README.md  pyproject.toml
src/day01/: main.py
src/day03/: main.py
src/day06/: main.py
src/day07/: main.py
src/day08/: main.py
src/day1/: README.md  main.py
src/day10/: main.py
src/day11/: main.py
src/day12/: main.py
src/day14/: main.py
src/day15/: main.py  warehouse.py
src/day16/: main.py
src/day17/: main.py
src/day18/: main.py
src/day19/: main.py
src/day2/: README.md  main.py
src/day20/: main.py
src/day21/: directional_encoder.py  directional_pad.py  main.py  numeric_pad.py  numeric_to_directional_converter.py
src/day22/: main.py  monkey_broker.py  seller.py
src/day23/: main.py  network_table.py
src/day24/: full_adder_debugger.py  lazy_evaluator.py  main.py
src/day25/: main.py
src/day3/: main.py
src/day4/: main.py
src/day5/: main.py
src/day6/: main.py
src/day7/: main.py
src/day8/: main.py
src/day9/: main.py
src/utils/: Directions.py  __init__.py  bidirectional_grid.py  directions.py  flatten.py  grid.py  parse_all.py  reapply.py
templates/: generator.py  main.jinja  test_main.jinja
tests/day1/: test_main.py
tests/day10/: test_main.py
tests/day11/: test_main.py
tests/day12/: test_main.py
tests/day13/: test_main.py
tests/day14/: test_main.py
tests/day15/: test_main.py
tests/day16/: test_main.py
tests/day17/: test_main.py
tests/day18/: test_main.py
tests/day19/: test_main.py
tests/day2/: test_main.py
tests/day20/: test_main.py
tests/day21/: test_main.py
(+13 files in other folders)
