[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonino Cangialosi", email = "ninocangialosi@yahoo.it" }
]
requires-python = ">=3.13.0"
dependencies = [
    "jinja2>=3.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
