[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonino Cangialosi", email = "ninocangialosi@yahoo.it" }
]
requires-python = ">=3.13.0"
dependencies = [
    "icecream>=2.1.3",
    "jinja2>=3.1.4",
    "numpy>=2.1.3",
    "returns>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
